--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.0.23/dist/tailwind.min.css" rel="stylesheet" /> -->
+    <link href="./src/output.css" rel="stylesheet">
     <meta
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello from Electron renderer!</title>
+    <title>Snake Game</title>
   </head>
-  <body>
-    <h1>Hello from Electron renderer!</h1>
-    <p>👋</p>
-    <p id="info"></p>
+  <body class="bg-gray-900 text-white font-sans flex items-center justify-center h-screen">
+    <div class="text-center">
+      <h1 class="text-4xl font-bold mb-4">Snake Game</h1>
+      <canvas id="gameCanvas" width="400" height="400" class="border-4 border-green-500  mx-auto mb-4"></canvas>
+      <p class="text-lg">Score: <span id="score">0</span></p>
+      <p class="text-sm text-gray-400 mt-2">Use arrow keys to move the snake</p>
+    </div>
+
+    <script src="./renderer.js"></script>
+    <script src="game.js"></script>
   </body>
-  <script src="./renderer.js"></script>
 </html>
