--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     />
     <title>Snake Game</title>
   </head>
-  <body class="bg-gray-900 text-white font-sans flex items-center justify-center h-screen">
+  <body class="bg-yellow-100 text-white font-sans flex items-center justify-center h-screen">
     <div class="text-center">
-      <h1 class="text-4xl font-bold mb-4">Snake Game</h1>
-      <canvas id="gameCanvas" width="400" height="400" class="border-4 border-green-500  mx-auto mb-4"></canvas>
-      <p class="text-lg">Score: <span id="score">0</span></p>
-      <p class="text-sm text-gray-400 mt-2">Use arrow keys to move the snake</p>
+      <!-- <h1 class="text-4xl font-bold mb-4">Snake Game</h1> -->
+      <canvas id="gameCanvas" width="500" height="500" class=" bg-green-200   mx-auto mb-4"></canvas>
+      <!-- <p class="text-lg">Score: <span id="score">0</span></p> -->
+      <!-- <p class="text-sm text-gray-400 mt-2">Use arrow keys to move the snake</p> -->
     </div>
 
     <script src="./renderer.js"></script>
