--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
       content="default-src 'self'; script-src 'self'"
     />
     <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.0.23/dist/tailwind.min.css" rel="stylesheet" /> -->
-    <link href="./src/output.css" rel="stylesheet">
+    <link href="./src/output.css" rel="stylesheet" />
     <meta
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
     <title>Snake Game</title>
   </head>
-  <body class="bg-yellow-100 text-white font-sans flex items-center justify-center h-screen">
+  <body
+    class="bg-black text-white font-sans flex items-center justify-center h-screen"
+  >
     <div class="text-center">
       <!-- <h1 class="text-4xl font-bold mb-4">Snake Game</h1> -->
-      <canvas id="gameCanvas" width="500" height="500" class=" bg-green-200   mx-auto mb-4"></canvas>
+      <canvas
+      id="gameCanvas"
+      width="500"
+      height="500"
+      style="width: 500px; height: 500px; image-rendering: pixelated;"
+      class="bg-black border-2 border-gray-200 mx-auto"
+    ></canvas>
       <!-- <p class="text-lg">Score: <span id="score">0</span></p> -->
       <!-- <p class="text-sm text-gray-400 mt-2">Use arrow keys to move the snake</p> -->
     </div>
